--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,15 +1,15 @@
-name: HCL OneTest Performance
+name: Rational Performance Tester
 
 on: workflow_dispatch
 
 jobs:
     Performance-Action:
-        name: HCL OneTest Performance GitHub Action
+        name: Rational Performance Tester GitHub Action
         runs-on: self-hosted
         steps:
-         - name: HCL OneTest Performance GitHub Action
-           uses: HCL-TECH-SOFTWARE/onetest-perf-action@v1
+         - name: Rational Performance Tester GitHub Action
+           uses: IBM/devopsauto-perftest-actions@v1
            with:
-            workspace: C:\Users\LocalUser\Workspace
-            project: perfproject
+            workspace: D:\Workspace-2024\
+            project: PerfTest
             suite: perftest
